--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,33 +7,31 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
+        tools:context=".MainActivity"
         android:gravity="center"
-        tools:context=".MainActivity">
+        android:padding="20dp"
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/txt_font_regular"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/hello"
-            android:textSize="20sp"
-            style="@style/fontStyleRegular"/>
 
-        <TextView
-            android:id="@+id/txt_font_medium"
-            android:layout_width="wrap_content"
+        <Button
+            android:id="@+id/btn_country"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/hello"
-            android:textSize="20sp"
-            style="@style/fontStyleMedium"/>
+            android:text="@string/countries" />
 
-        <TextView
-            android:id="@+id/txt_font_bold"
-            android:layout_width="wrap_content"
+        <Button
+            android:id="@+id/btn_currency"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/hello"
-            android:textSize="20sp"
-            style="@style/fontStyleBold"/>
+            android:text="@string/currencies"
+            android:layout_marginTop="10dp"/>
+
+        <Button
+            android:id="@+id/btn_filters"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/filters"
+            android:layout_marginTop="10dp"/>
 
     </LinearLayout>
 </layout>
