--- a/app/src/main/res/layout/activity_item_recyle.xml
+++ b/app/src/main/res/layout/activity_item_recyle.xml
@@ -4,7 +4,8 @@
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
     android:orientation="horizontal"
-    android:padding="10dp">
+    android:padding="10dp"
+    android:id="@+id/continer">
 
     <LinearLayout
         android:layout_width="match_parent"
