--- a/app/src/main/res/layout/fragment_login_with_email.xml
+++ b/app/src/main/res/layout/fragment_login_with_email.xml
@@ -5,13 +5,20 @@
     android:layout_height="match_parent"
     tools:context=".features.login.presenter.activities.LoginWithEmailFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-            style="@style/Button.OutLine"
+        android:id="@+id/txt_name"
+        android:layout_gravity="center"
+        style="@style/TextView.Bold"
+        android:textSize="20sp"
+        android:text="@string/hello_email_fragment" />
 
-    android:text="@string/hello_blank_fragment" />
+    <TextView
+        android:id="@+id/txt_email"
+        android:layout_gravity="center"
+        style="@style/TextView.Bold"
+        android:textSize="20sp"
+        android:layout_marginTop="50dp"
+        android:text="@string/hello_email_fragment" />
 
 
 </FrameLayout>
