--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,43 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical"
+    android:padding="20dp"
+    tools:context=".MainActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".MainActivity"
-        android:gravity="center"
-        android:padding="20dp"
-        android:orientation="vertical">
-        
-        <com.google.android.material.textview.MaterialTextView
-            style="@style/TextView.Bold"
-            android:text="Hello World !"
-            android:textSize="20sp"/>
+    <com.google.android.material.textview.MaterialTextView
+        style="@style/TextView.Bold"
+        android:text="@string/hello_world"
+        android:textSize="20sp" />
 
-        <com.google.android.material.textview.MaterialTextView
-            style="@style/TextView"
-            android:text="This is a test app."/>
+    <com.google.android.material.textview.MaterialTextView
+        style="@style/TextView"
+        android:text="@string/this_is_a_test_app" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_country"
-            android:text="@string/countries"
-            style="@style/Button"
-            android:layout_marginTop="16dp"/>
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_country"
+        style="@style/Button"
+        android:layout_marginTop="16dp"
+        android:text="@string/countries" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_currency"
-            android:text="@string/currencies"
-            android:layout_marginTop="16dp"
-            style="@style/Button.OutLine"/>
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_currency"
+        style="@style/Button.OutLine"
+        android:layout_marginTop="16dp"
+        android:text="@string/currencies" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_filters"
-            android:text="@string/filters"
-            android:layout_marginTop="16dp"
-            style="@style/Button.Delete"/>
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_filters"
+        style="@style/Button.Delete"
+        android:layout_marginTop="16dp"
+        android:text="@string/filters" />
 
-    </LinearLayout>
-</layout>
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_fragments"
+        style="@style/Button.Secondary"
+        android:layout_marginTop="16dp"
+        android:text="@string/fragments" />
+
+</LinearLayout>
